istio-rules/10-guestbook-service-circ-breaker-permissive.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: guestbook-service
spec:
  host: guestbook-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 2
      interval: 3s
      baseEjectionTime: 1m
      maxEjectionPercent: 100
