istio-rules/13-mtls-bad-rule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "bad-rule"
  namespace: "default"
spec:
  host: "helloworld-service.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
