istio-rules/8-guestbook-ui-vs-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service
spec:
  hosts:
  - helloworld-service
  http:
  - route:
    - destination:
        host: helloworld-service
    fault:
      delay:
        percent: 100
        fixedDelay: 5s
