istio-rules/9-guestbook-service-circ-breaker-dest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-service
spec:
  host: helloworld-service
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
    outlierDetection:
      baseEjectionTime: 120.000s
      consecutiveErrors: 2
      interval: 1.000s
      maxEjectionPercent: 100
